09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_hard_start_day_fix.2026-05-01_14-18-15.txt
===== NOCTYRIUM HARD START DAY FIX =====
Version remains locked: v0.03.01

Swift backup:
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-hard-start-day-fix.2026-05-01_14-18-15.swift

===== VERIFY CURRENT SOURCE COMPILES =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:961:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2443:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3074:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3078:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Current source compiles.

===== PATCHING AUTHORITATIVE ACTIVE STUDY DAY LOGIC =====

===== NORMALIZING FILES =====

===== COMPILE TEST =====
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:380:19: error: cannot find 'nowStamp' in scope
        let now = nowStamp()
                  ^~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:406:44: error: cannot infer contextual base in reference to member 'utf8'
            if let data = row.data(using: .utf8) {
                                          ~^~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:973:13: warning: variable 'lines' was never mutated; consider changing to 'let' constant
        var lines = raw.components(separatedBy: .newlines).filter { !$0.trimmingCharacters(in: .whitespaces).isEmpty }
        ~~~ ^
        let
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:2455:9: warning: initialization of immutable value 'nb3YoungOrBetter' was never used; consider replacing with assignment to '_' or removing it
    let nb3YoungOrBetter = nb3Core.filter { $0.quality >= 2 }
    ~~~~^~~~~~~~~~~~~~~~
    _
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3086:25: warning: result of call to 'shell' is unused
                        shell("open \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.swift:3090:25: warning: result of call to 'shell' is unused
                        shell("open -R \"\(prompt.fullPath)\"")
                        ^    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
Compile failed. Restoring backup.
Restored: /Users/jd/Medical School/09 Admin/App Framework/MedicalSchoolHub.before-hard-start-day-fix.2026-05-01_14-18-15.swift
Report: /Users/jd/Medical School/09 Admin/App Data/Noctyrium/Diagnostics/noctyrium_hard_start_day_fix.2026-05-01_14-18-15.txt
